Simple entry point ready to go 🥧

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 # :see: https://packaging.python.org/en/latest/specifications/declaring-project-metadata
 
 [project]
-name = "boilerplate"
+name = "py-ttw-entry-points-demo"
 version = "1.0.0"
-description = "Template for Python repos"
+description = "Simple demonstration showing how entry points work"
 readme = "README.rst"
 requires-python = ">= 3.12"
 license = { text = "© 2023 PHX Limited - All Rights Reserved" }
@@ -14,16 +14,12 @@ authors = [
 dependencies = [
 ]
 
-[project.urls]
-Documentation = "https://github.com/phx-nz/boilerplate"
-Changelog = "https://github.com/phx-nz/boilerplate/releases"
-Issues = "https://github.com/phx-nz/boilerplate/issues"
-Repository = "https://github.com/phx-nz/boilerplate"
+[project.entry-points."app.command"]
+extras = "entry_points_demo.commands.extras:command"
 
 [tool.autohooks]
 mode = "pipenv"
 pre-commit = [
     "autohooks.plugins.black",
     "autohooks.plugins.ruff",
-    "autohooks.plugins.pytest"
 ]
