--- a/Pipfile
+++ b/Pipfile
@@ -4,23 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-boilerplate = { file = "." }
+py-ttw-entry-points-demo = { file = "." }
 
 [dev-packages]
-boilerplate = { file = ".", editable = true }
+py-ttw-entry-points-demo = { file = ".", editable = true }
 autohooks = "*"
 autohooks-plugin-black = "*"
-autohooks-plugin-pytest = "*"
 autohooks-plugin-ruff = "*"
 black = "*"
-build = "*"
 ipython = "*"
-pytest = "*"
 ruff = "*"
-sphinx = "*"
-sphinx_rtd_theme = "*"
-tox = "*"
-twine = "*"
+typer = "*"
 
 [requires]
 python_version = "3.12"
+
+[scripts]
+app-cli = "python -m entry_points_demo.commands.extras"
